# dp_meta_selector

./: .gitignore  README.md  __init__.py  applicator.py  baseline_store.py  calibration.py  config.py  datasets.py  diagnostics.py  evaluator.py  main.py  mechanisms.py  meta_dataset.py  meta_features.py  meta_learner.py  pyproject.toml  reporter.py  requirements-dev.txt  requirements.txt  selector.py  statistics.py  synthetic_datasets.py  test.py  types.py  utility.py
research/: DECISIONS.md  benchmark_evaluator.py
research/docs/: 00_index.md  01_baseline_analysis.md  02_categorical_prefilter.md  03_family_hierarchy.md  04_gaussian_optimization.md  05_improvements_v14_v16.md  06_mechanism_comparison.md  07_lessons_learned.md  08_datasets.md  09_results_summary.md  10_technical_architecture.md  11_scientific_contribution.md  20_final_benchmark_report.md
research/tuning/: tune_meta_models.py
scripts/: compare_dp_mechanisms.py
tests/: conftest.py  test_applicator.py  test_baseline_store.py  test_meta_features.py  test_meta_learner.py  test_types.py  test_utility.py
